--- a/src/app/pages/profil/edit-profil/edit-profil.page.html
+++ b/src/app/pages/profil/edit-profil/edit-profil.page.html
@@ -27,6 +27,12 @@
       <ion-input type="number" [(ngModel)]="age" name="age" [placeholder]="age_actuel"></ion-input>
     </ion-item>
 
+    <ion-item>
+      <input type="file" multiple value="select" #selectFile (change)="onFileSelected($event)" accept=".jpg,.jpeg,.png">
+      <!-- <ion-button type="button" (click)="onUpload()"> Upload</ion-button> -->
+    </ion-item>
+
+
     <ion-button expand="full" color="primary" (click)="submit()">Soumettre mes modifications</ion-button>
   </form>
 </ion-content>
